fixed the shot meta div styling to handle long shot title wrapping

--- a/public/stylesheets/hooppps.css
+++ b/public/stylesheets/hooppps.css
@@ -142,24 +142,24 @@ h3 {
   font-weight: bold;
   text-shadow: 0px 1px 1px #000;
 }
-#content h2.shot_meta {
-  position: relative;
+#content .shot_meta {
+  min-height: 50px;
+}
+#content .shot_meta h2 {
+  padding: 0 0 0 65px;
   color: #333;
 }
-#content h2.shot_meta img {
-  display: inline-block;
+#content .shot_meta img {
+  position: absolute;
   vertical-align: top;
-  margin-right: 10px;
+  left: 10px;
   width: 50px;
   height: 50px;
 }
-#content h2.shot_meta span {
+#content .shot_meta h2 span {
   font-weight: normal;
-  display: block;
   font-size: 14px;
-  position: absolute;
-  top: 30px;
-  left: 65px;
+  display: block;
 }
 #content a.big-pink:link,
 #content a.big-pink:visited {
